# Assembly-and-SIMD

./: CMakeLists.txt  Dockerfile  README.md  docker_build.sh  docker_run.sh
src/: simd_sum.cpp  sum.cpp
